fix: size and alignment of banner image

--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,6 +1,5 @@
 .bannerImage {
-  width: 100vw;
-  // max-height: 400px;
+  max-height: 400px;
 
   margin: 0 auto 5rem;
 }
